--- a/ShibugakiViewer/Views/Resources/Constants.xaml
+++ b/ShibugakiViewer/Views/Resources/Constants.xaml
@@ -106,6 +106,7 @@
 
     <system:Double x:Key="IconFontSize">24</system:Double>
     <system:Double x:Key="NormalTextSize">16</system:Double>
+    <system:Double x:Key="InputTextSize">14</system:Double>
     <system:Double x:Key="TitleTextSize">18</system:Double>
     <system:Double x:Key="SubTitleTextSize">14</system:Double>
     <system:Double x:Key="ContextMenuTextSize">16</system:Double>
