--- a/ShibugakiViewer/Views/SettingPages/ViewerSettingPage.xaml
+++ b/ShibugakiViewer/Views/SettingPages/ViewerSettingPage.xaml
@@ -228,6 +228,9 @@
                             Content="{x:Static properties:Resources.AnimatedGifSwitch_Text}" 
                             IsChecked="{Binding IsAnimatedGifEnabled.Value,Mode=TwoWay}"/>
 
+                        <CheckBox 
+                            Content="{x:Static properties:Resources.ExifOrientationSwitch_Text}" 
+                            IsChecked="{Binding IsExifOrientationDisabled.Value,Mode=TwoWay}"/>
 
                         <Grid>
                             <Grid.ColumnDefinitions>
