--- a/ShibugakiViewer/Views/InformationPanes/SelectedItemsPage.xaml
+++ b/ShibugakiViewer/Views/InformationPanes/SelectedItemsPage.xaml
@@ -104,7 +104,7 @@
                             <b:PopupDialogBehavior.Content>
                                 <Border
                                     x:Name="fileOperationDialog"
-                                    Background="{StaticResource OptionPaneColor}"
+                                    Background="{StaticResource ToolPanelColor}"
                                     Width="Auto"
                                     BorderBrush="Gray"
                                     BorderThickness="1">
