Ignore first key action at tag selector

--- a/ShibugakiViewer/Views/Controls/TagSelector.xaml
+++ b/ShibugakiViewer/Views/Controls/TagSelector.xaml
@@ -13,6 +13,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
              IsEnabledChanged="UserControl_IsEnabledChanged"
+             PreviewKeyDown="UserControl_PreviewKeyDown"
              PreviewKeyUp="UserControl_PreviewKeyUp"
              DataContextChanged="UserControl_DataContextChanged">
 
